Add intersection method on set, split definition and call function

--- a/notebooks/python_101.ipynb
+++ b/notebooks/python_101.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unique_elems(l1, l2):\n",
+    "    answ = set(l1).intersection(set(l2))\n",
+    "    return list(answ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -15,15 +26,6 @@
     }
    ],
    "source": [
-    "def unique_elems(l1, l2):\n",
-    "    answ = []\n",
-    "    for elem in l1:\n",
-    "        if elem in l2:\n",
-    "            answ.append(elem)\n",
-    "    # set - множество уникальных значений\n",
-    "    # Убираем дублирующиеся элементы\n",
-    "    return list(set(answ))\n",
-    "    \n",
     "print(unique_elems(list([1, 2, 'a', 3]), list(['a', 'b', 'c', 3])))\n",
     "print(unique_elems(list([1, 2, 3]), list(['1', '2', '3'])))"
    ]
