--- a/notebooks/1_visualization.ipynb
+++ b/notebooks/1_visualization.ipynb
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('data/bank_additional.csv', sep=';')\n",
+    "df = pd.read_csv('../data/bank_additional.csv', sep=';')\n",
     "df.head()"
    ]
   },
@@ -566,12 +566,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/automobile_preprocessed.csv', sep=';')"
+    "df = pd.read_csv('../data/automobile_preprocessed.csv', sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -671,16 +671,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x238f1dc3e50>"
+       "<seaborn.axisgrid.PairGrid at 0x179f4eca6a0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -717,16 +717,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x238f272c520>"
+       "<seaborn.axisgrid.PairGrid at 0x179f330d070>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
