Add serialization model

--- a/notebooks/9_streamlit.ipynb
+++ b/notebooks/9_streamlit.ipynb
@@ -20,7 +20,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Разделим данные на обучение и тест, нормализуем их"
+    "Проведем предобработку данных.\n",
+    "\n",
+    "Разделим данные на обучение и тест, нормализуем их."
    ]
   },
   {
@@ -64,6 +66,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Метод <code>trainee_model</code> обучает модель с гиперпараметрами"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -79,6 +88,13 @@
     "                               max_iter=parameters['max_iter'], positive=parameters['positive'])\n",
     "    classifier_EN.fit(X_train, y_train)\n",
     "    return classifier_EN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Метод <code>process_prediction</code> выдает метрики качества для модели"
    ]
   },
   {
@@ -107,7 +123,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pickle"
+    "# Pickle [docs](https://docs.python.org/3/library/pickle.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Сериализация в байтовое представление"
    ]
   },
   {
@@ -141,7 +164,7 @@
     "        pickle.dump(model, fin)\n",
     "    return filename\n",
     "\n",
-    "def deserialize_model(filename=\"ser.dat\"):\n",
+    "def deserialize_model_file(filename=\"ser.dat\"):\n",
     "    with open(filename, 'rb') as fout:\n",
     "        model = pickle.load(fout)\n",
     "    return model"
@@ -151,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [STREAMLIT](https://www.notion.so/a53e9e35dc4f482f889e2a3f516be9fd)"
+    "# [STREAMLIT статья](https://www.notion.so/a53e9e35dc4f482f889e2a3f516be9fd) [docs](https://docs.streamlit.io/en/stable/)"
    ]
   },
   {
@@ -301,6 +324,11 @@
     "        X_train, y_train, X_test, y_test = prepared_dataset(df)\n",
     "        \n",
     "        model = trainee_model(X_train, y_train, parameters)\n",
+    "        # Сериализация модели\n",
+    "        model_bytes = serialize_model(model)\n",
+    "        \n",
+    "        # Десериализация модели\n",
+    "        model_deser = deserialize_model(model_bytes)\n",
     "        process_prediction(model, X_test, y_test)"
    ]
   },
