Add info about author at heroku app

--- a/notebooks/9_streamlit.ipynb
+++ b/notebooks/9_streamlit.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Деплой в Heroku\n",
+    "\n",
+    "https://test-ml-1.herokuapp.com/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +36,13 @@
     "from keras.layers import Dense, InputLayer\n",
     "from keras.models import Sequential\n",
     "from keras.activations import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Предобработка данных"
    ]
   },
   {
@@ -258,6 +274,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Загрузка данных из файла"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -439,12 +462,12 @@
     "            parameters['input_shape'] = input_shape\n",
     "        model = trainee_model(X_train, y_train, model=model_type, parameters=parameters)\n",
     "        if model_type != 'neural_network':\n",
-    "            st.write(model)\n",
     "            # Сериализация модели\n",
     "            model_bytes = serialize_model(model)\n",
     "            # Десериализация модели\n",
     "            model_deser = deserialize_model(model_bytes)\n",
-    "        process_prediction(model, X_test, y_test)"
+    "        process_prediction(model, X_test, y_test)\n",
+    "    st.write(\"By Konstantin Ushakov, 2021.\")"
    ]
   },
   {
@@ -468,13 +491,6 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
