--- a/notebooks/9_streamlit.ipynb
+++ b/notebooks/9_streamlit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.layers import Dense, InputLayer\n",
     "from keras.models import Sequential\n",
-    "from keras.activations import *"
+    "from keras.activations import *\n",
+    "from keras.callbacks import Callback"
    ]
   },
   {
@@ -168,19 +169,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Keras callback](https://keras.io/guides/writing_your_own_callbacks/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomCallback(Callback):\n",
+    "    def __init__(self, epochs=1):\n",
+    "        super(CustomCallback, self).__init__()\n",
+    "        self.epochs = epochs\n",
+    "        self.pr_bar = st.progress(0)\n",
+    "        pass\n",
+    "    \n",
+    "    def on_epoch_end(self, epoch, logs=None):\n",
+    "        keys = list(logs.keys())\n",
+    "        if epoch < self.epochs:\n",
+    "            progress = float(epoch) / self.epochs\n",
+    "        else:\n",
+    "            progress = 100\n",
+    "        self.pr_bar.progress(progress)\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Метод <code>trainee_model</code> обучает модель с гиперпараметрами"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def trainee_model(X_train, y_train, model=\"\", parameters={'epochs':1}):\n",
     "    regressor = init_model(model, parameters)\n",
     "    if model == 'neural_network':\n",
-    "        regressor.fit(X_train, y_train, epochs=parameters['epochs'])\n",
+    "        regressor.fit(X_train, y_train, epochs=parameters['epochs'],\n",
+    "                     callbacks=[CustomCallback(parameters['epochs'])])\n",
     "    else:\n",
     "        regressor.fit(X_train, y_train)\n",
     "    return regressor"
@@ -282,6 +314,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@st.cache\n",
+    "def load_description(filename='../data/automobile_description.md'):\n",
+    "    with open(filename, 'r', encoding=\"utf-8\") as fin:\n",
+    "        descr_auto = fin.read()\n",
+    "        return descr_auto"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
    "outputs": [],
@@ -300,7 +345,7 @@
    "source": [
     "def main():\n",
     "    page = st.sidebar.selectbox('Choose a page', ['Description', 'Regressor'])\n",
-    "    \n",
+    "    df = load_data('../data/automobile_preprocessed.csv')\n",
     "    if page == 'Description':\n",
     "        st.header('Automobile dataset description')\n",
     "        description_task = '''## Task 3\n",
@@ -313,106 +358,11 @@
     "\n",
     "Найдите реализации методов в sklearn, оставьте в нотбуке ссылки на документацию. Найдите наилучшие гиперпараметры. Оцените качество моделей: R2, Mean Square Error(MSE), Root Mean Square Error(RMSE),  mean absolute error (MAE). Свои действия снабжайте пояснениями.'''\n",
     "        st.write(description_task)\n",
-    "        description = '''\n",
-    "        ## Автомобили [Источник](https://archive.ics.uci.edu/ml/datasets/Automobile)\n",
-    "\n",
-    "### Описание данных\n",
-    "\n",
-    "     Attribute:                Attribute Range:\n",
-    "     ------------------        -----------------------------------------------\n",
-    "  1. symboling:                -3, -2, -1, 0, 1, 2, 3.\n",
-    "  2. normalized-losses:        continuous from 65 to 256.\n",
-    "  3. make:                     alfa-romero, audi, bmw, chevrolet, dodge, honda,\n",
-    "                               isuzu, jaguar, mazda, mercedes-benz, mercury,\n",
-    "                               mitsubishi, nissan, peugot, plymouth, porsche,\n",
-    "                               renault, saab, subaru, toyota, volkswagen, volvo\n",
-    "  4. fuel-type:                diesel, gas.\n",
-    "  5. aspiration:               std, turbo.\n",
-    "  6. num-of-doors:             four, two.\n",
-    "  7. body-style:               hardtop, wagon, sedan, hatchback, convertible.\n",
-    "  8. drive-wheels:             4wd, fwd, rwd.\n",
-    "  9. engine-location:          front, rear.\n",
-    " 10. wheel-base:               continuous from 86.6 120.9.\n",
-    " 11. length:                   continuous from 141.1 to 208.1.\n",
-    " 12. width:                    continuous from 60.3 to 72.3.\n",
-    " 13. height:                   continuous from 47.8 to 59.8.\n",
-    " 14. curb-weight:              continuous from 1488 to 4066.\n",
-    " 15. engine-type:              dohc, dohcv, l, ohc, ohcf, ohcv, rotor.\n",
-    " 16. num-of-cylinders:         eight, five, four, six, three, twelve, two.\n",
-    " 17. engine-size:              continuous from 61 to 326.\n",
-    " 18. fuel-system:              1bbl, 2bbl, 4bbl, idi, mfi, mpfi, spdi, spfi.\n",
-    " 19. bore:                     continuous from 2.54 to 3.94.\n",
-    " 20. stroke:                   continuous from 2.07 to 4.17.\n",
-    " 21. compression-ratio:        continuous from 7 to 23.\n",
-    " 22. horsepower:               continuous from 48 to 288.\n",
-    " 23. peak-rpm:                 continuous from 4150 to 6600.\n",
-    " 24. city-mpg:                 continuous from 13 to 49.\n",
-    " 25. highway-mpg:              continuous from 16 to 54.\n",
-    " 26. price:                    continuous from 5118 to 45400.\n",
-    "\n",
-    "8. Missing Attribute Values: (denoted by \"?\")\n",
-    "   Attribute #:   Number of instances missing a value:\n",
-    "   2.             41\n",
-    "   6.             2\n",
-    "   19.            4\n",
-    "   20.            4\n",
-    "   22.            2\n",
-    "   23.            2\n",
-    "   26.            4\n",
-    "\n",
-    "### Source Information\n",
-    "   -- Creator/Donor: Jeffrey C. Schlimmer (Jeffrey.Schlimmer@a.gp.cs.cmu.edu)\n",
-    "   -- Date: 19 May 1987\n",
-    "   -- Sources:\n",
-    "     1) 1985 Model Import Car and Truck Specifications, 1985 Ward's\n",
-    "        Automotive Yearbook.\n",
-    "     2) Personal Auto Manuals, Insurance Services Office, 160 Water\n",
-    "        Street, New York, NY 10038 \n",
-    "     3) Insurance Collision Report, Insurance Institute for Highway\n",
-    "        Safety, Watergate 600, Washington, DC 20037\n",
-    "\n",
-    "### Past Usage\n",
-    "   -- Kibler,~D., Aha,~D.~W., \\& Albert,~M. (1989).  Instance-based prediction\n",
-    "      of real-valued attributes.  {\\it Computational Intelligence}, {\\it 5},\n",
-    "      51--57.\n",
-    "\t -- Predicted price of car using all numeric and Boolean attributes\n",
-    "\t -- Method: an instance-based learning (IBL) algorithm derived from a\n",
-    "\t    localized k-nearest neighbor algorithm.  Compared with a\n",
-    "\t    linear regression prediction...so all instances\n",
-    "\t    with missing attribute values were discarded.  This resulted with\n",
-    "\t    a training set of 159 instances, which was also used as a test\n",
-    "\t    set (minus the actual instance during testing).\n",
-    "\t -- Results: Percent Average Deviation Error of Prediction from Actual\n",
-    "\t    -- 11.84% for the IBL algorithm\n",
-    "\t    -- 14.12% for the resulting linear regression equation\n",
-    "\n",
-    "4. Relevant Information:\n",
-    "   -- Description\n",
-    "      This data set consists of three types of entities: (a) the\n",
-    "      specification of an auto in terms of various characteristics, (b)\n",
-    "      its assigned insurance risk rating, (c) its normalized losses in use\n",
-    "      as compared to other cars.  The second rating corresponds to the\n",
-    "      degree to which the auto is more risky than its price indicates.\n",
-    "      Cars are initially assigned a risk factor symbol associated with its\n",
-    "      price.   Then, if it is more risky (or less), this symbol is\n",
-    "      adjusted by moving it up (or down) the scale.  Actuarians call this\n",
-    "      process \"symboling\".  A value of +3 indicates that the auto is\n",
-    "      risky, -3 that it is probably pretty safe.\n",
-    "\n",
-    "      The third factor is the relative average loss payment per insured\n",
-    "      vehicle year.  This value is normalized for all autos within a\n",
-    "      particular size classification (two-door small, station wagons,\n",
-    "      sports/speciality, etc...), and represents the average loss per car\n",
-    "      per year.\n",
-    "\n",
-    "   -- Note: Several of the attributes in the database could be used as a\n",
-    "            \"class\" attribute.\n",
-    "\n",
-    "        '''\n",
+    "        st.dataframe(df)\n",
+    "        description = load_description()\n",
     "        st.write(description)\n",
     "    else:\n",
     "        st.header('Automobile dataset')\n",
-    "        df = load_data('../data/automobile_preprocessed.csv')\n",
     "        # Set model type\n",
     "        model_type = st.selectbox('Select model', ['elastic_net', 'ridge', 'sgd_regressor', 'neural_network'])\n",
     "        parameters = {}\n",
@@ -453,7 +403,7 @@
     "            parameters['optimizer'] = optimizer\n",
     "            loss = st.selectbox('Select loss function', ['mse', 'mae'], key='loss')\n",
     "            parameters['loss'] = loss\n",
-    "            epochs = st.slider('Select number of epochs', min_value=1, max_value=1000, value=1, step=3, key='epochs')\n",
+    "            epochs = st.slider('Select number of epochs', min_value=1, max_value=2000, value=1, step=6, key='epochs')\n",
     "            parameters['epochs'] = epochs\n",
     "\n",
     "        X_train, y_train, X_test, y_test = prepared_dataset(df)\n",
