refactor density for normal distribution

--- a/notebooks/4_naive_bayes.ipynb
+++ b/notebooks/4_naive_bayes.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 4,
    "id": "9412d9f5",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 5,
    "id": "27fa3637",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "[41188 rows x 70 columns]"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 6,
    "id": "9f505b9c",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f3dc5b79",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
        "(array([0, 1], dtype=int64), array([36548,  4640], dtype=int64))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b768829a",
    "metadata": {},
    "outputs": [],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3e4f20f3",
    "metadata": {},
    "outputs": [],
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f62dd446",
    "metadata": {},
    "outputs": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5d16130b",
    "metadata": {},
    "outputs": [
@@ -715,7 +715,7 @@
        "((9280, 69), (9280,))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a68df38c",
    "metadata": {},
    "outputs": [],
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "194dcfc1",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "d96f7bd4",
    "metadata": {
     "scrolled": true
@@ -789,67 +789,67 @@
       "Data columns (total 61 columns):\n",
       " #   Column                         Non-Null Count  Dtype \n",
       "---  ------                         --------------  ----- \n",
-      " 0   poutcome_nonexistent           9280 non-null   string\n",
-      " 1   education_professional.course  9280 non-null   string\n",
-      " 2   education_basic.4y             9280 non-null   string\n",
-      " 3   marital_married                9280 non-null   string\n",
-      " 4   job_blue-collar                9280 non-null   string\n",
-      " 5   day_of_week_wed                9280 non-null   string\n",
-      " 6   housing_no                     9280 non-null   string\n",
-      " 7   education_university.degree    9280 non-null   string\n",
-      " 8   month_nov                      9280 non-null   string\n",
-      " 9   previous_1                     9280 non-null   string\n",
-      " 10  job_admin.                     9280 non-null   string\n",
-      " 11  marital_divorced               9280 non-null   string\n",
-      " 12  previous_6                     9280 non-null   string\n",
-      " 13  contact_cellular               9280 non-null   string\n",
-      " 14  education_high.school          9280 non-null   string\n",
-      " 15  job_technician                 9280 non-null   string\n",
-      " 16  loan_unknown                   9280 non-null   string\n",
-      " 17  previous_4                     9280 non-null   string\n",
-      " 18  marital_unknown                9280 non-null   string\n",
+      " 0   contact_telephone              9280 non-null   string\n",
+      " 1   marital_divorced               9280 non-null   string\n",
+      " 2   poutcome_nonexistent           9280 non-null   string\n",
+      " 3   contact_cellular               9280 non-null   string\n",
+      " 4   month_jul                      9280 non-null   string\n",
+      " 5   day_of_week_fri                9280 non-null   string\n",
+      " 6   education_professional.course  9280 non-null   string\n",
+      " 7   day_of_week_mon                9280 non-null   string\n",
+      " 8   previous_1                     9280 non-null   string\n",
+      " 9   previous_3                     9280 non-null   string\n",
+      " 10  day_of_week_wed                9280 non-null   string\n",
+      " 11  previous_2                     9280 non-null   string\n",
+      " 12  month_aug                      9280 non-null   string\n",
+      " 13  default_yes                    9280 non-null   string\n",
+      " 14  month_jun                      9280 non-null   string\n",
+      " 15  previous_4                     9280 non-null   string\n",
+      " 16  default_no                     9280 non-null   string\n",
+      " 17  housing_unknown                9280 non-null   string\n",
+      " 18  marital_single                 9280 non-null   string\n",
       " 19  job_unemployed                 9280 non-null   string\n",
-      " 20  previous_0                     9280 non-null   string\n",
-      " 21  loan_no                        9280 non-null   string\n",
-      " 22  job_retired                    9280 non-null   string\n",
-      " 23  day_of_week_thu                9280 non-null   string\n",
-      " 24  education_basic.6y             9280 non-null   string\n",
-      " 25  month_aug                      9280 non-null   string\n",
-      " 26  contact_telephone              9280 non-null   string\n",
-      " 27  default_yes                    9280 non-null   string\n",
-      " 28  month_apr                      9280 non-null   string\n",
-      " 29  loan_yes                       9280 non-null   string\n",
-      " 30  previous_5                     9280 non-null   string\n",
-      " 31  month_jul                      9280 non-null   string\n",
-      " 32  month_oct                      9280 non-null   string\n",
-      " 33  marital_single                 9280 non-null   string\n",
-      " 34  day_of_week_tue                9280 non-null   string\n",
-      " 35  housing_yes                    9280 non-null   string\n",
-      " 36  day_of_week_fri                9280 non-null   string\n",
-      " 37  education_basic.9y             9280 non-null   string\n",
-      " 38  job_self-employed              9280 non-null   string\n",
-      " 39  job_management                 9280 non-null   string\n",
-      " 40  previous_7                     9280 non-null   string\n",
-      " 41  month_mar                      9280 non-null   string\n",
-      " 42  month_jun                      9280 non-null   string\n",
-      " 43  education_unknown              9280 non-null   string\n",
-      " 44  housing_unknown                9280 non-null   string\n",
-      " 45  poutcome_failure               9280 non-null   string\n",
-      " 46  previous_2                     9280 non-null   string\n",
-      " 47  month_dec                      9280 non-null   string\n",
-      " 48  previous_3                     9280 non-null   string\n",
-      " 49  job_unknown                    9280 non-null   string\n",
+      " 20  job_retired                    9280 non-null   string\n",
+      " 21  job_services                   9280 non-null   string\n",
+      " 22  job_management                 9280 non-null   string\n",
+      " 23  education_basic.6y             9280 non-null   string\n",
+      " 24  month_sep                      9280 non-null   string\n",
+      " 25  loan_yes                       9280 non-null   string\n",
+      " 26  education_university.degree    9280 non-null   string\n",
+      " 27  education_high.school          9280 non-null   string\n",
+      " 28  previous_0                     9280 non-null   string\n",
+      " 29  loan_unknown                   9280 non-null   string\n",
+      " 30  poutcome_success               9280 non-null   string\n",
+      " 31  job_blue-collar                9280 non-null   string\n",
+      " 32  month_mar                      9280 non-null   string\n",
+      " 33  day_of_week_tue                9280 non-null   string\n",
+      " 34  previous_6                     9280 non-null   string\n",
+      " 35  job_self-employed              9280 non-null   string\n",
+      " 36  day_of_week_thu                9280 non-null   string\n",
+      " 37  education_unknown              9280 non-null   string\n",
+      " 38  job_student                    9280 non-null   string\n",
+      " 39  previous_7                     9280 non-null   string\n",
+      " 40  loan_no                        9280 non-null   string\n",
+      " 41  job_unknown                    9280 non-null   string\n",
+      " 42  education_basic.4y             9280 non-null   string\n",
+      " 43  education_illiterate           9280 non-null   string\n",
+      " 44  housing_yes                    9280 non-null   string\n",
+      " 45  default_unknown                9280 non-null   string\n",
+      " 46  month_nov                      9280 non-null   string\n",
+      " 47  month_may                      9280 non-null   string\n",
+      " 48  job_admin.                     9280 non-null   string\n",
+      " 49  job_entrepreneur               9280 non-null   string\n",
       " 50  job_housemaid                  9280 non-null   string\n",
-      " 51  default_unknown                9280 non-null   string\n",
-      " 52  job_services                   9280 non-null   string\n",
-      " 53  poutcome_success               9280 non-null   string\n",
-      " 54  job_entrepreneur               9280 non-null   string\n",
-      " 55  job_student                    9280 non-null   string\n",
-      " 56  day_of_week_mon                9280 non-null   string\n",
-      " 57  month_sep                      9280 non-null   string\n",
-      " 58  month_may                      9280 non-null   string\n",
-      " 59  default_no                     9280 non-null   string\n",
-      " 60  education_illiterate           9280 non-null   string\n",
+      " 51  month_dec                      9280 non-null   string\n",
+      " 52  job_technician                 9280 non-null   string\n",
+      " 53  month_apr                      9280 non-null   string\n",
+      " 54  poutcome_failure               9280 non-null   string\n",
+      " 55  marital_married                9280 non-null   string\n",
+      " 56  housing_no                     9280 non-null   string\n",
+      " 57  previous_5                     9280 non-null   string\n",
+      " 58  marital_unknown                9280 non-null   string\n",
+      " 59  education_basic.9y             9280 non-null   string\n",
+      " 60  month_oct                      9280 non-null   string\n",
       "dtypes: string(61)\n",
       "memory usage: 4.3 MB\n",
       "None\n"
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e523d567",
    "metadata": {},
    "outputs": [],
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "4f06a530",
    "metadata": {},
    "outputs": [],
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "e01a2b80",
    "metadata": {},
    "outputs": [],
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "5802af08",
    "metadata": {},
    "outputs": [],
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "8b10bf2b",
    "metadata": {},
    "outputs": [],
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "66bb5462",
    "metadata": {},
    "outputs": [],
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "adcaf775",
    "metadata": {},
    "outputs": [
@@ -1233,7 +1233,7 @@
        "14   облачно    True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "dc3eea4f",
    "metadata": {
     "scrolled": true
@@ -1295,7 +1295,7 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "0cb4440d",
    "metadata": {
     "scrolled": true
@@ -1357,7 +1357,7 @@
        "(array([1, 2, 3]), array([2, 1, 1], dtype=int64))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,13 +1382,13 @@
     "\n",
     "$\\sigma = \\left[ \\frac{1}{n-1} \\sum\\limits_{i=1}^{n} (x_i - \\mu)^2 \\right]^{0.5}$ -- стандартное отклонение\n",
     "\n",
-    "$f(x) = \\frac{1}{\\sqrt{2\\pi\\sigma}}\\exp({-\\frac{(x-\\mu)^2}{2\\sigma^2})}$ -- функция плотности для нормального распределения\n",
+    "$P(x_i \\mid y) = \\frac{1}{\\sqrt{2\\pi\\sigma^2_y}} \\exp\\left(-\\frac{(x_i — \\mu_y)^2}{2\\sigma^2_y}\\right)$ -- функция плотности для нормального распределения\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 24,
    "id": "266a071c",
    "metadata": {},
    "outputs": [],
@@ -1454,14 +1454,7 @@
     "            self.prob_quartile[name_column] = prob_values\n",
     "    \n",
     "    def density_func(self, x, mu, sigma, eps=1.0e-3):\n",
-    "        if np.abs(sigma) < eps:\n",
-    "            sigma = eps\n",
-    "        divisor = np.sqrt(2 * np.pi * sigma)\n",
-    "        if np.abs(divisor) < eps:\n",
-    "            divisor = eps\n",
-    "        ex = np.min((np.exp(-np.power(x - mu, 2) / (2 * sigma * sigma + eps)), np.sqrt(2 * np.pi)))\n",
-    "        return ex / divisor\n",
-    "        # return np.exp(-np.power(x - mu, 2) / (2 * sigma * sigma + eps)) / divisor\n",
+    "        return np.exp(-np.power(x - mu, 2) / (2 * sigma * sigma + eps)) / np.sqrt(2. * np.pi * sigma * sigma + eps)\n",
     "    \n",
     "    def get_p_x_i(self, x, y_i):\n",
     "        x = x.astype(\"float\")\n",
@@ -1491,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 25,
    "id": "a8dec1b8",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 26,
    "id": "aecf4344",
    "metadata": {},
    "outputs": [],
@@ -1515,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 27,
    "id": "54d0e7ad",
    "metadata": {},
    "outputs": [
@@ -1524,44 +1517,32 @@
      "output_type": "stream",
      "text": [
       "Confusion matrix:\n",
-      "[[924   0]\n",
-      " [932   0]]\n",
+      "[[921  11]\n",
+      " [872  52]]\n",
       "Classification report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.50      1.00      0.66       924\n",
-      "           1       0.00      0.00      0.00       932\n",
+      "           0       0.51      0.99      0.68       932\n",
+      "           1       0.83      0.06      0.11       924\n",
       "\n",
-      "    accuracy                           0.50      1856\n",
-      "   macro avg       0.25      0.50      0.33      1856\n",
-      "weighted avg       0.25      0.50      0.33      1856\n",
+      "    accuracy                           0.52      1856\n",
+      "   macro avg       0.67      0.52      0.39      1856\n",
+      "weighted avg       0.67      0.52      0.39      1856\n",
       "\n",
       "\n",
       "Confusion matrix:\n",
-      "[[863  61]\n",
-      " [560 372]]\n",
+      "[[792 140]\n",
+      " [395 529]]\n",
       "Classification report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.61      0.93      0.74       924\n",
-      "           1       0.86      0.40      0.55       932\n",
+      "           0       0.67      0.85      0.75       932\n",
+      "           1       0.79      0.57      0.66       924\n",
       "\n",
-      "    accuracy                           0.67      1856\n",
-      "   macro avg       0.73      0.67      0.64      1856\n",
-      "weighted avg       0.73      0.67      0.64      1856\n",
+      "    accuracy                           0.71      1856\n",
+      "   macro avg       0.73      0.71      0.71      1856\n",
+      "weighted avg       0.73      0.71      0.71      1856\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "D:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "D:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
@@ -1573,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 28,
    "id": "4d7a5953",
    "metadata": {
     "scrolled": true
@@ -1594,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 29,
    "id": "756a09b4",
    "metadata": {},
    "outputs": [
@@ -1637,22 +1618,6 @@
     "print()\n",
     "print_metrics(X_2, np.array([0, 1]), y_pred_GNB_1)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a01a5749",
-   "metadata": {},
-   "source": [
-    "## Iris Dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4867885",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
