Add pickle objects

--- a/notebooks/7_Обработка_ЕЯ_основы NLP_2.ipynb
+++ b/notebooks/7_Обработка_ЕЯ_основы NLP_2.ipynb
@@ -18,7 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pickle"
    ]
   },
   {
@@ -831,6 +832,14 @@
    "source": [
     "count_vectorizer = CountVectorizer()\n",
     "bow = count_vectorizer.fit_transform(df.tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c06131b2",
+   "metadata": {},
+   "source": [
+    "Посмотрим на размерность"
    ]
   },
   {
@@ -3219,6 +3228,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "080c9b84",
+   "metadata": {},
+   "source": [
+    "Сериализуем на диск данную модель мешка слов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "02513338",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../modules/bow.dat\", \"wb\") as fin:\n",
+    "    pickle.dump(bow, fin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8930971a",
    "metadata": {},
    "source": [
@@ -3235,7 +3263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "6fd4d6cb",
    "metadata": {},
    "outputs": [
@@ -3245,7 +3273,7 @@
        "(10000, 27902)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3257,8 +3285,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df6f6777",
+   "metadata": {},
+   "source": [
+    "Ненулевые значения находятся на тех же местах, но отмасштабированы в зависимости от частоты слов."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "200fe98c",
    "metadata": {},
    "outputs": [
@@ -3268,7 +3304,7 @@
        "matrix([[0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3279,7 +3315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "d281c5b5",
    "metadata": {},
    "outputs": [],
@@ -3297,7 +3333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "99824059",
    "metadata": {
     "scrolled": true
@@ -3506,13 +3542,32 @@
        "[10000 rows x 6 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad89cafd",
+   "metadata": {},
+   "source": [
+    "Сериализуем на диск данную модель tf-idf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5b923245",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../modules/tfidf.dat\", \"wb\") as fin:\n",
+    "    pickle.dump(tfidf, fin)"
    ]
   },
   {
@@ -3525,7 +3580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "fd4df004",
    "metadata": {},
    "outputs": [],
